# QFaceServer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp
src/arcface/: Facenet.cpp  Facenet.h  detector.cpp  detector.h  detector_handler.cpp  detector_handler.h  facenet_handler.cpp  facenet_handler.h  onet.cpp  onet.h  pnet.cpp  pnet.h  rnet.cpp  rnet.h  utils.h
src/config/: config.h
src/server/: admin_http_handler.cpp  admin_http_handler.h  base64.cpp  database.cpp  database.h  database_pool.cpp  database_pool.h  http_handler_factory.cpp  http_handler_factory.h  http_server.cpp  http_server.h  intercept_http_handler.cpp  intercept_http_handler.h  log.cpp  log.h  logger.cpp  logger.h  matchine_http_handler.cpp  matchine_http_handler.h  redis.cpp  redis.h  redis_pool.cpp  redis_pool.h  user_http_handler.cpp  user_http_handler.h  utils.cpp  utils.h  video_http_handler.cpp  video_http_handler.h  worker_http_handler.cpp  worker_http_handler.h
